--- a/src/Product.css
+++ b/src/Product.css
@@ -28,7 +28,7 @@
     margin-top: 5px;
 }
 
-.product__button {
+.product>button {
     background: #f0c14b;
     margin-top: 10px;
     border-color: #a88734 #9c7e31 #846a29;
